Update bib, deeper header levels, and decision variables written

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -68,3 +68,25 @@
   url = "https://en.wikipedia.org/w/index.php?title=Continuous_uniform_distribution&oldid=1098500085",
   note = "[Online; accessed 29-July-2022]"
 }
+
+@Article{Li2016,
+  author = {Li, Jing-Quan},
+  title = {Battery-electric transit bus developments and operations: A review},
+  journal = {International Journal of Sustainable Transportation},
+  year = {2016},
+  volume = {10},
+  number = {3},
+  pages = {157--169},
+  publisher = {Taylor \& Francis},
+}
+
+@INPROCEEDINGS{Qarebagh2019,
+  author = {Qarebagh, Ahad Javandoust and Sabahi, Farnaz and Nazarpour, Dariush},
+  booktitle = {2019 27th Iranian Conference on Electrical Engineering (ICEE)},
+  title = {Optimized Scheduling for Solving Position Allocation Problem in Electric Vehicle Charging Stations},
+  year = {2019},
+  volume = {},
+  number = {},
+  pages = {593-597},
+  doi = {10.1109/IranianCEE.2019.8786524},
+}
