--- a/docs/main.bib
+++ b/docs/main.bib
@@ -1,92 +1,119 @@
-@incollection{Henderson,
-  doi = {10.1007/0-306-48056-5_10},
-  url = {https://doi.org/10.1007%2F0-306-48056-5_10},
-  publisher = {Kluwer Academic Publishers},
-  pages = {287--319},
-  author = {Darrall Henderson and Sheldon H. Jacobson and Alan W. Johnson},
-  title = {The Theory and Practice of Simulated Annealing},
-  booktitle = {International Series in Operations Research {\&}amp: Management Science},
+@Comment{
+ebib-main-file: /home/alex/Documents/research/references.bib
 }
+
 
 @article{Bertsimas_1993,
-  doi = {10.1214/ss/1177011077},
-  url = {https://doi.org/10.1214%2Fss%2F1177011077},
-  year = {1993},
-  month = {feb},
-  publisher = {Institute of Mathematical Statistics},
-  volume = {8},
-  number = {1},
-  author = {Dimitris Bertsimas and John Tsitsiklis},
-  title = {Simulated Annealing},
-  journal = {Statistical Science},
+	doi = {10.1214/ss/1177011077},
+	url = {https://doi.org/10.1214%2Fss%2F1177011077},
+	year = {1993},
+	month = {feb},
+	publisher = {Institute of Mathematical Statistics},
+	volume = {8},
+	number = {1},
+	author = {Dimitris Bertsimas and John Tsitsiklis},
+	title = {Simulated Annealing},
+	journal = {Statistical Science}
 }
 
-@article{Rutenbar_1989,
-  doi = {10.1109/101.17235},
-  url = {https://doi.org/10.1109%2F101.17235},
-  year = {1989},
-  month = {jan},
-  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
-  volume = {5},
-  number = {1},
-  pages = {19--26},
-  author = {R.A. Rutenbar},
-  title = {Simulated annealing algorithms: an overview},
-  journal = {{IEEE} Circuits and Devices Magazine},
+@book{Chen2010,
+	title = {Applied integer programming},
+	publisher = {Wiley},
+	year = {2010},
+	author = {Chen, Der-San and Batson, Robert G and Dang, Yu},
+	journal = {Hoboken, NJ}
 }
 
 @BOOK{Gendreau2018-pw,
-  title = {Handbook of Metaheuristics},
-  editor = {Gendreau, Michel and Potvin, Jean-Yves},
-  publisher = {Springer International Publishing},
-  series = {Internationalseries in operation research \& management science},
-  edition = {3},
-  month = {oct},
-  language = {en},
+	title = {Handbook of Metaheuristics},
+	editor = {Gendreau, Michel and Potvin, Jean-Yves},
+	publisher = {Springer International Publishing},
+	series = {Internationalseries in operation research \& management science},
+	edition = {3},
+	month = {oct},
+	language = {en}
+}
+
+@incollection{Henderson,
+	doi = {10.1007/0-306-48056-5_10},
+	url = {https://doi.org/10.1007%2F0-306-48056-5_10},
+	publisher = {Kluwer Academic Publishers},
+	pages = {287--319},
+	author = {Darrall Henderson and Sheldon H. Jacobson and Alan W. Johnson},
+	title = {The Theory and Practice of Simulated Annealing},
+	booktitle = {International Series in Operations Research {\&}amp: Management Science}
 }
 
 @book{Keller_2019,
-  doi = {10.2174/97816810870541190101},
-  url = {https://doi.org/10.2174%2F97816810870541190101},
-  year = {2019},
-  month = {mar},
-  publisher = {{BENTHAM} {SCIENCE} {PUBLISHERS}},
-  author = {Andre A. Keller},
-  title = {Multi-Objective Optimization In Theory and Practice {II}: Metaheuristic Algorithms},
-}
-
-@misc{tutorials_point,
-  title={Find if two rectangles overlap using C++.},
-  url={https://www.tutorialspoint.com/find-if-two-rectangles-overlap-using-cplusplus},
-  journal={Tutorials Point}
-}
-
-@misc{enwiki:continous-uniform-distribution,
-  author = "{Wikipedia contributors}",
-  title = "Continuous uniform distribution --- {Wikipedia}{,} The Free Encyclopedia",
-  year = "2022",
-  url = "https://en.wikipedia.org/w/index.php?title=Continuous_uniform_distribution&oldid=1098500085",
-  note = "[Online; accessed 29-July-2022]"
+	doi = {10.2174/97816810870541190101},
+	url = {https://doi.org/10.2174%2F9781681      0870541190101},
+	year = {2019},
+	month = {mar},
+	publisher = {{BENTHAM} {SCIENCE} {PUBLISHERS}},
+	author = {Andre A. Keller},
+	title = {Multi-Objective Optimization In Theory and Practice {II}: Metaheuristic Algorithms}
 }
 
 @Article{Li2016,
-  author = {Li, Jing-Quan},
-  title = {Battery-electric transit bus developments and operations: A review},
-  journal = {International Journal of Sustainable Transportation},
-  year = {2016},
-  volume = {10},
-  number = {3},
-  pages = {157--169},
-  publisher = {Taylor \& Francis},
+	author = {Li, Jing-Quan},
+	title = {Battery-electric transit bus developments and operations: A review},
+	journal = {International Journal of Sustainable Transportation},
+	year = {2016},
+	volume = {10},
+	number = {3},
+	pages = {157--169},
+	publisher = {Taylor \& Francis}
+}
+
+@Article{Luenberger2008,
+	author = {Luenberger, David G. and Ye, Yinyu},
+	title = {Penalty and Barrier Methods},
+	journal = {Linear and Nonlinear Programming},
+	year = 2008,
+	pages = {401–433},
+	issn = {2214-7934},
+	doi = {10.1007/978-0-387-74503-9_13},
+	url = {http://dx.doi.org/10.1007/978-0-387-74503-9_13},
+	ISBN = 9780387745039,
+	publisher = {Springer US}
 }
 
 @INPROCEEDINGS{Qarebagh2019,
-  author = {Qarebagh, Ahad Javandoust and Sabahi, Farnaz and Nazarpour, Dariush},
-  booktitle = {2019 27th Iranian Conference on Electrical Engineering (ICEE)},
-  title = {Optimized Scheduling for Solving Position Allocation Problem in Electric Vehicle Charging Stations},
-  year = {2019},
-  volume = {},
-  number = {},
-  pages = {593-597},
-  doi = {10.1109/IranianCEE.2019.8786524},
+	author = {Qarebagh, Ahad Javandoust and Sabahi, Farnaz and Nazarpour, Dariush},
+	booktitle = {2019 27th Iranian Conference on Electrical Engineering (ICEE)},
+	title = {Optimized Scheduling for Solving Position Allocation Problem in Electric Vehicle Charging Stations},
+	year = {2019},
+	volume = {},
+	number = {},
+	pages = {593-597},
+	doi = {10.1109/IranianCEE.2019.8786524}
 }
+
+@article{Rutenbar_1989,
+	doi = {10.1109/101.17235},
+	url = {https://doi.org/10.1109%2F101.17235},
+	year = {1989},
+	month = {jan},
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	volume = {5},
+	number = {1},
+	pages = {19--26},
+	author = {R.A. Rutenbar},
+	title = {Simulated annealing algorithms: an overview},
+	journal = {{IEEE} Circuits and Devices Magazine}
+}
+
+@misc{enwiki:continous-uniform-distribution,
+	author = "{Wikipedia contributors}",
+	title = "Continuous uniform distribution --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2022",
+	url = "https://en.wikipedia.org/w/index.php?title=Continuous_uniform_distribution&oldid=1098500085",
+	note = "[Online; accessed 29-July-2022]"
+}
+
+@misc{tutorials_point,
+	title = {Find if two rectangles overlap using C++.},
+	url = {https://www.tutorialspoint.com/find-if-two-rectangles-overlap-using-cplusplus},
+	journal = {Tutorials Point}
+}
+
